fix bottom navbar problem on mobile screen again and again 0_o

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2362,7 +2362,6 @@ p {
 .carousel-item {
   background-color: #2e8163;
   position: relative;
-  height: 100vh; 
   height: calc(var(--vh, 1vh) * 100);}
   .carousel-item::before {
     position: absolute;
